<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_lineup"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="Lineup - Schedule" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="Activities" />

        <item
            android:id="@+id/nav_checklist"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="Checklist" />

        <item
            android:id="@+id/nav_directions"
            android:icon="@drawable/ic_directions_black_24dp"
            android:title="Directions" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="Navigate" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_instagram"
                android:title="Instagram" />
            <item
                android:id="@+id/nav_facebook"
                android:title="Facebook Group" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>